--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="13*"/>
         </Grid.ColumnDefinitions>
         <DataGrid Grid.Column="2" Margin="0,20,0,0"/>
-        <TreeView Grid.Column="0" Margin="0,20,0,0" />
+        <TreeView Grid.Column="0" Margin="0,20,0,0" ItemsSource="{Binding Path=Folders}"/>
         <GridSplitter Grid.Column="1" ShowsPreview="False" Width="3"
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
         <GridSplitter Grid.Column="3" ShowsPreview="False" Width="3"
@@ -36,6 +36,5 @@
             </MenuItem>
             <MenuItem Header="Delete"/>
         </Menu>
-        <TextBox x:Name="txtTest" Text="{Binding Path=Id, Mode=TwoWay}" Margin="0,177,0,0"  />
     </Grid>
 </Window>
