--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Registration.WPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525" WindowStartupLocation="CenterScreen"
+        Title="MainWindow" Height="597" Width="1229" WindowStartupLocation="CenterScreen"
         Initialized="Window_Initialized">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -28,8 +28,7 @@
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
         <GridSplitter Grid.Column="3" ShowsPreview="False" Width="3"
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
-        <Menu Height="20" Width ="525
-              "  VerticalAlignment="Top" Grid.ColumnSpan="3" Margin="0,0,143,0">
+        <Menu Height="20"  VerticalAlignment="Top" Grid.ColumnSpan="6" Margin="0,0,-71,0">
             <MenuItem Header="New Letter">
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\NewLetter.png"/>
@@ -40,7 +39,6 @@
                     <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Delete"/>
         </Menu>
     </Grid>
 </Window>
