--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/FullContentLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/FullContentLetterControl.xaml
@@ -13,7 +13,7 @@
         <Label x:Name="label_Copy" Content="Sender" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
         <Label x:Name="label_Copy1" Content="Receivers" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
         <Label x:Name="label_Copy2" Content="Message" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="25" Margin="10,36,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="294"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="25" Margin="10,36,0,0" TextWrapping="Wrap" Text="{Binding Path=LetterView.Name}" VerticalAlignment="Top" Width="294"/>
         <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="25" Margin="10,87,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="294"/>
         <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="296" Margin="10,194,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="294"/>
         <Label x:Name="label1" Content="Date" HorizontalAlignment="Left" Margin="373,10,0,0" VerticalAlignment="Top"/>
