--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -67,8 +67,7 @@
                 </MenuItem.Icon>
             </MenuItem>
         </Menu>
-
-        <ContentControl Content="{Binding Path=LetterPlugin}"/>
+        <UserControl Grid.Column="4" DataContext="{Binding Registration.WPF.Models.ImportantLetterControl, Mode=TwoWay}"/>
     </Grid>
     
 </Window>
