added form's load

--- a/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/MainWindow.xaml
@@ -7,8 +7,7 @@
         xmlns:local="clr-namespace:Registration.WPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="597" Width="1229" WindowStartupLocation="CenterScreen"
-        Initialized="Window_Initialized" MinWidth="600" MinHeight="300">
-    
+        Initialized="Window_Initialized" MinWidth="600" MinHeight="300">    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="403*" />
@@ -18,7 +17,6 @@
             <ColumnDefinition Width="408*" />
             <ColumnDefinition Width="0*"/>
         </Grid.ColumnDefinitions>
-
         <DataGrid Name="BriefContentLetters" Grid.Column="2" Margin="0,20,0,0" ItemsSource="{Binding Letters}" SelectedItem="{Binding Path=SelectedLetter}" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Title" Binding="{Binding Path=Name}" Width="90" />
@@ -56,16 +54,25 @@
         <GridSplitter Grid.Column="3" ShowsPreview="False" Width="3"
         HorizontalAlignment="Center" VerticalAlignment="Stretch" />
         <Menu Height="20"  VerticalAlignment="Top" Grid.ColumnSpan="6" Margin="0,0,-71,0">
-            <MenuItem Header="New Letter">
+            <MenuItem Header="New Letter" ItemsSource="{Binding Path=ExistLettersTypes.Keys}" >
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="Click">
+                        <i:InvokeCommandAction
+                           Command="{Binding Path=SelectedLetterType}" 
+                            
+                            />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
                 <MenuItem.Icon>
                     <Image Source="C:\Users\Ivanova.M\Downloads\NewLetter.png"/>
                 </MenuItem.Icon>
             </MenuItem>
-            <MenuItem Header="Delete Letter">
-                <MenuItem.Icon>
-                    <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
-                </MenuItem.Icon>
-            </MenuItem>
+
+            <MenuItem Header="Delete Letter" Command="{Binding Path=DeleteLetterClick}">
+                    <MenuItem.Icon>
+                        <Image Source="C:\Users\Ivanova.M\Downloads\DeleteLetter.png"/>
+                    </MenuItem.Icon>
+                </MenuItem>
         </Menu>
         <UserControl Grid.Column="4" DataContext="{Binding Registration.WPF.Models.ImportantLetterControl, Mode=TwoWay}"/>
     </Grid>
