--- a/DocsVision_Test-master/Registration/Registration.WPF/App.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/App.xaml
@@ -1,9 +1,19 @@
 ﻿<Application x:Class="Registration.WPF.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewmodel="clr-namespace:Registration.WPF.ViewModels"
+             xmlns:view="clr-namespace:Registration.WPF.Views.Controls"
              xmlns:local="clr-namespace:Registration.WPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <DataTemplate DataType="{x:Type viewmodel:ImportantLetterControlViewModel}">
+            <view:ImportantLetterControlView HorizontalAlignment="Stretch" />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:FullContentLetterControlViewModel}">
+            <view:FullContentLetterControl HorizontalAlignment="Stretch" />
+        </DataTemplate>
+        <DataTemplate DataType="{x:Type viewmodel:LetterWithResponseTimeControlViewModel}">
+            <view:LetterWithResponseTimeControl HorizontalAlignment="Stretch" />
+        </DataTemplate>
     </Application.Resources>
 </Application>
