--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Registration.WPF.Views.Controls.MyDemo"
+﻿<UserControl x:Class="Registration.WPF.Views.Controls.ImportantLetterControlView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="500" d:DesignWidth="544">
     <Grid>
-        <local:FullContentLetterControl HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,-201,-190"/>
-        <local:ImportanceDegreeEditorControl HorizontalAlignment="Left" Margin="373,87,-205,0" VerticalAlignment="Top" Width="132" Height="42"/>
-        <Label x:Name="lblImportanceDegree" Content="Degree of importance" HorizontalAlignment="Left" Margin="373,61,-199,0" VerticalAlignment="Top"/>
+        <local:FullContentLetterControl HorizontalAlignment="Left" Margin="10,16,0,-6" VerticalAlignment="Top"/>
+        <local:ImportanceDegreeEditorControl HorizontalAlignment="Left" Margin="381,96,0,0" VerticalAlignment="Top" Width="132" Height="42"/>
+        <Label x:Name="lblImportanceDegree" Content="Degree of importance" HorizontalAlignment="Left" Margin="381,70,0,0" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
