--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/ImportantLetterControlView.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="500" d:DesignWidth="544">
     <Grid>
         <local:FullContentLetterControl HorizontalAlignment="Left" Margin="10,16,0,-6" VerticalAlignment="Top"/>
-        <local:ImportanceDegreeEditorControl HorizontalAlignment="Left" Margin="381,96,0,0" VerticalAlignment="Top" Width="132" Height="42"/>
+        <local:ImportanceDegreeEditorControl DataContext="{Binding Path=CurrentImportantLetterControlView}" HorizontalAlignment="Left" Margin="381,96,0,0" VerticalAlignment="Top" Width="132" Height="42"/>
         <Label x:Name="lblImportanceDegree" Content="Degree of importance" HorizontalAlignment="Left" Margin="381,70,0,0" VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
