--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/SentFolderControl.xaml
@@ -4,10 +4,19 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Registration.WPF.Views.Controls"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              mc:Ignorable="d" 
              d:DesignHeight="64" d:DesignWidth="232">
     <Grid>
-        <local:CreateFolderControl HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <local:CreateFolderControl x:Name="A"  DataContext="{Binding Path=CurrentFolerPropertiesPlugin}" HorizontalAlignment="Left" VerticalAlignment="Top" >
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="DataContextChange">
+                    <i:InvokeCommandAction
+                           Command="{Binding Path=DataContextChange}"
+                CommandParameter="{Binding ElementName=A, Path=SelectedValue}" />
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </local:CreateFolderControl>
 
     </Grid>
 </UserControl>
