--- a/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/FullContentLetterControl.xaml
+++ b/DocsVision_Test-master/Registration/Registration.WPF/Views/Controls/FullContentLetterControl.xaml
@@ -13,11 +13,11 @@
         <Label x:Name="label_Copy" Content="Sender" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
         <Label x:Name="label_Copy1" Content="Receivers" HorizontalAlignment="Left" Margin="10,114,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
         <Label x:Name="label_Copy2" Content="Message" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.491,2.637"/>
-        <TextBox x:Name="title" Height="25" Margin="10,36,197,430" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Width="294" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalAlignment="Left"/>
-        <TextBox x:Name="sender" HorizontalAlignment="Left" Height="25" Margin="10,87,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}"  VerticalAlignment="Top" Width="294"/>
-        <TextBox x:Name="message" HorizontalAlignment="Left" Height="296" Margin="10,194,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}"  VerticalAlignment="Top" Width="294"/>
+        <TextBox x:Name="title" Height="25" Margin="10,36,197,430" TextWrapping="Wrap" IsReadOnly="True" Text="{Binding Path=LetterTitle, Mode=TwoWay}"  Width="294" VerticalAlignment="Top" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" HorizontalAlignment="Left"/>
+        <TextBox x:Name="sender" HorizontalAlignment="Left" Height="25" Margin="10,87,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=LetterSenderName, Mode=TwoWay}" VerticalAlignment="Top" Width="294"/>
+        <TextBox x:Name="message" HorizontalAlignment="Left" Height="296" Margin="10,194,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=LetterText, Mode=TwoWay}" VerticalAlignment="Top" Width="294"/>
         <Label x:Name="label1" Content="Date" HorizontalAlignment="Left" Margin="373,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="date" HorizontalAlignment="Left" Height="25" Margin="373,36,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" VerticalAlignment="Top" Width="128"/>
+        <TextBox x:Name="date" HorizontalAlignment="Left" Height="25" Margin="373,36,0,0" TextWrapping="Wrap" IsReadOnly="{Binding Path=ReadOnly}" Text="{Binding Path=LetterView.Date, Mode=TwoWay}" VerticalAlignment="Top" Width="128"/>
 
     </Grid>
 </UserControl>
